@@ -174,7 +174,7 @@ public:
     friend class wxXmlSerializer;
 
     XS_DECLARE_CLONABLE_CLASS(xsSerializable);
-	
+
 	enum SEARCHMODE
 	{
 		/*! \brief Depth-First-Search algorithm */
@@ -209,7 +209,7 @@ public:
     xsSerializable* GetFirstChild();
     /*!
      * \brief Get first serializable child object of given type.
-	 * \param type Child object type (can be NULL for any type)  
+	 * \param type Child object type (can be NULL for any type)
      * \return Pointer to child object if exists, otherwise NULL
      */
     xsSerializable* GetFirstChild(wxClassInfo *type);
@@ -220,7 +220,7 @@ public:
     xsSerializable* GetLastChild();
     /*!
      * \brief Get last serializable child object of given type.
-	 * \param type Child object type (can be NULL for any type) 
+	 * \param type Child object type (can be NULL for any type)
      * \return Pointer to child object if exists, otherwise NULL
      */
     xsSerializable* GetLastChild(wxClassInfo *type);
@@ -231,7 +231,7 @@ public:
     xsSerializable* GetSibbling();
     /*!
      * \brief Get next serializable sibbling object of given type.
-	 * \param type Child object type (can be NULL for any type) 
+	 * \param type Child object type (can be NULL for any type)
      * \return Pointer to sibbling object if exists, otherwise NULL
      */
     xsSerializable* GetSibbling(wxClassInfo *type);
@@ -275,7 +275,7 @@ public:
      * \brief Get pointer to list node containing last serializable child object.
      */
     inline SerializableList::compatibility_iterator GetLastChildNode() const { return m_lstChildItems.GetLast(); }
-	
+
     /*!
      * \brief Set serializable parent object.
      * \param parent Pointer to parent object
@@ -696,7 +696,7 @@ public:
      * \param type Class type
      * \param list List with matching serializable objects
 	 * \param mode Search mode
-	 * \sa xsSerializable::SEARCHMODE 
+	 * \sa xsSerializable::SEARCHMODE
      */
     void GetItems(wxClassInfo* type, SerializableList& list, xsSerializable::SEARCHMODE mode = xsSerializable::searchBFS);
     /*!
@@ -816,6 +816,12 @@ public:
 	void InitializeAllIOHandlers();
 	/*! \brief Clear all initialized property IO handlers */
 	void ClearIOHandlers();
+	/*!
+	 * \brief Get property I/O handler for given datatype.
+	 * \param datatype String ID of data type
+	 * \return Pointer to I/O handler suitable for given data type if exists, otherwise NULL
+	 */
+	inline static xsPropertyIO* GetPropertyIOHandler(const wxString& datatype) { return m_mapPropertyIOHandlers[datatype]; }
 
     /*! \brief Map of property IO handlers */
     static PropertyIOMap m_mapPropertyIOHandlers;
